--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/node": "^9.2.1",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.1",
+    "@astrojs/vercel": "^8.1.4",
     "astro": "^5.7.10"
   }
 }
