--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^12.5.2",
     "@astrojs/db": "^0.14.13",
     "@astrojs/mdx": "^4.2.6",
+    "@astrojs/netlify": "^6.3.2",
     "@astrojs/node": "^9.2.1",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.1",
-    "@astrojs/vercel": "^8.1.4",
     "astro": "^5.7.10"
   }
 }
